--- a/frontend/index.html
+++ b/frontend/index.html
@@ -47,3 +47,21 @@
   <script src="script.js"></script>
 </body>
 </html>
+
+<div id="auth-modal" class="modal">
+  <div class="modal-content">
+    <span class="close">&times;</span>
+    <h2>Login / Sign Up</h2>
+    <form id="login-form">
+      <input type="email" id="login-email" placeholder="Email" required>
+      <input type="password" id="login-password" placeholder="Password" required>
+      <button type="submit">Login</button>
+    </form>
+    <form id="signup-form">
+      <input type="text" id="signup-username" placeholder="Username" required>
+      <input type="email" id="signup-email" placeholder="Email" required>
+      <input type="password" id="signup-password" placeholder="Password" required>
+      <button type="submit">Sign Up</button>
+    </form>
+  </div>
+</div>
